puppet: runtime-v2 compatibility (#81)